# PreQ-BMC

./: .gitignore  CITATION.cff  Insights.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: EXPERIMENT_GUIDE.md  README.md  REPRODUCIBILITY.md  ToThinkAbout.md  architecture.md  artifact_evaluation.md  expected_results.md  gurobi_and_esbmc.md  installation.md  metrics.md  novelty_delta.md  reproducing_article_results.md  semantic_fidelity_audit.md  solver_backends.md
examples/: README.md
examples/iris_demo/: config.json
experiments/: README.md  README_article_experiments.md  article_experiments.json  paper_experiments.json  paper_experiments_mnist.json
src/: Preqbmc_backdoor_main.py  Preqbmc_robustness_main.py  cli.py  read_iris_test.py
src/backends/: c_qnn_generator.py  fixed_point.py
src/configs/: hardware_profiles.py
src/datasets/: __init__.py  loaders.py
src/models/: __init__.py  deep_model.py  loading.py
src/reports/: baseline_import.py  experiment_summary.py  resource_metrics.py  table_export.py
src/scripts/: aggregate_article_results.py  analyze_smt_complexity.py  compare_solver_backends.py  install_esbmc.py  plot_article_results.py  plot_paper_results.py  run_article_experiments.py  run_paper_experiments.py  (+1 more)
tool/: .gitignore  Preqbmc_backdoor_main.py  Quadapter_backdoor_main.py  Quadapter_robustness_main.py  cli.py  esbmc_layer_0_Q13_F11.c  esbmc_layer_0_Q3_F1.c  esbmc_layer_0_Q4_F2.c  esbmc_verify_layer_0_Q3_F1.c  esbmc_verify_layer_0_Q3_F1_integer.c  layer_0_Q17_F16.c  readme.md  script.py
(+81 files in other folders)
